[metadata]
name = importify
version = 0.0.1
author = The0therPenguin
author_email = ykwfhp@gmail.com
description = Lets you import/install/uninstall stuff ezier from scripts
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/The0therPenguin/importify
project_urls =
    Bug Tracker = https://github.com/The0therPenguin/importify/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.4

[options.packages.find]
where = src
